mariadb-deploy.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mariadb
  labels:
    app: mariadb
    part-of: nextcloud
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@hourly"
    keel.sh/match-tag: true
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
      part-of: nextcloud
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mariadb
        part-of: nextcloud
    spec:
      serviceAccountName: nextcloud
      containers:
      - name: mariadb
        image: ghcr.io/linuxserver/mariadb:latest
        ports:
        - name: mariadb
          containerPort: 3306
        readinessProbe:
          tcpSocket:
            port: mariadb
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: mariadb
          initialDelaySeconds: 15
          periodSeconds: 20
        volumeMounts:
        - name: nextcloud-mariadb
          mountPath: /config
        - name: nextcloud-secrets
          mountPath: "/mnt/vault"
          readOnly: true
        resources:
          limits:
            memory: 256Mi
          requests:
            memory: 128Mi
      volumes:
      - name: nextcloud-mariadb
        persistentVolumeClaim:
          claimName: nextcloud-mariadb
      - name: nextcloud-secrets
        csi:
          driver: "secrets-store.csi.k8s.io"
          readOnly: true
          volumeAttributes:
            secretProviderClass: "nextcloud"
