nextcloud-deploy.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nextcloud
  labels:
    app: nextcloud
    part-of: nextcloud
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@hourly"
    keel.sh/match-tag: true
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
      part-of: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
        part-of: nextcloud
    spec:
      containers:
      - name: nextcloud
        image: ghcr.io/linuxserver/nextcloud:latest
        ports:
        - name: nextcloud
          containerPort: 443
        volumeMounts:
        - name: nextcloud
          mountPath: /config
        - name: data
          mountPath: /data
        resources:
          limits:
            memory: 256Mi
          requests:
            memory: 128Mi
        readinessProbe:
          tcpSocket:
            port: nextcloud
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: nextcloud
          initialDelaySeconds: 15
          periodSeconds: 20
      volumes:
      - name: nextcloud
        persistentVolumeClaim:
          claimName: nextcloud
      - name: data
        persistentVolumeClaim:
          claimName: data
