nextcloud-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: nextcloud
  selector:
    app: nextcloud
    part-of: nextcloud
