redis-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: redis
  selector:
    app: redis
    part-of: nextcloud
